force-app/main/default/objects/Freelance_in_Project__c/Freelance_in_Project__c.object-meta.xml
<CustomObject>
    <label>Freelance in Project</label>
    <nameField>
        <label>Freelance in Project - Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freelances in Project</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>