force-app/main/default/objects/Freelance_in_Project__c/fields/Freelance__c.field-meta.xml
<CustomField>
    <fullName>Freelance__c</fullName>
    <label>Freelance</label>
    <type>Lookup</type>
    <referenceTo>Freelance__c</referenceTo>
    <relationshipName>Freelance_Project_r</relationshipName>
</CustomField>